# irccmd

./: .arguments.c.swp  .arguments.h.swp  .config.c.swp  .config.h.swp  .configdefaults.c.swp  .configdefaults.h.swp  .ircmod.c.swp  .ircmod.h.swp  .main.c.swp  .main.h.swp  ChangeLog  Makefile  Makefile.in  arguments.c  arguments.h  autogen.sh  build_hudson.sh  config.c  config.status  configdefaults.c  configdefaults.h  configure  configure.ac  createpackages.sh  irccmd.cnf  irccmd.conf  ircmod.c  ircmod.h  main.c  main.h
debian/: changelog  control  dirs  files  install  irccmd.substvars  postinst  preinst  rules
debian/irccmd/DEBIAN/: control  md5sums  postinst  preinst
debian/irccmd/usr/share/doc/irccmd/: copyright
debian/source/: lintian-overrides
doc-pak/: ChangeLog
plugins/: crc.lua
src/: Makefile  Makefile.am  Makefile.in  arguments.c  arguments.h  commands.c  commands.h  config.c  config.h  configdefaults.h  def.h  def.h.in  input.c  input.h  irccmd  ircmod.c  ircmod.h  main.c  main.h  stamp-h1
